fix(java): verify JWT signature, exp/nbf, and algorithm in one place
Previously a leaked token stayed valid indefinitely because Plone's
one-hour expiry was never checked: JWTIdentityService trusted claims
parsed from an unverified string instead of re-verifying the token.

New JWTTokens centralizes verification (algorithm + signature + exp + nbf)
for JWTAuthenticationProvider and JWTIdentityService to share, switches the
default public key to the ed25519 key actually used elsewhere in the repo,
and lets it be overridden via PLONE_PUBLIC_KEY.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>